--- a/web/src/app/layout/header/header.html
+++ b/web/src/app/layout/header/header.html
@@ -24,7 +24,7 @@
     <mat-icon svgIcon="translate"></mat-icon>
   </button>
 
-  <mat-menu #menu="matMenu">
+  <mat-menu #menu="matMenu" class="dense-menu" xPosition="before">
     <button mat-menu-item (click)="selectLanguage('en')">English</button>
     <button mat-menu-item (click)="selectLanguage('es')">Español</button>
     <button mat-menu-item (click)="selectLanguage('ja')">日本語</button>
