--- a/web/src/app/pages/settings/youtube-settings/youtube-settings.html
+++ b/web/src/app/pages/settings/youtube-settings/youtube-settings.html
@@ -1,4 +1,4 @@
-<h3 class="mat-h3">YouTube Account</h3>
+<h3 class="mat-h3 my-4">YouTube Account</h3>
 
 <div *ngIf="gapi.user$ | async as user; else login">
   <div class="flex items-center space-x-2 mb-5">
