--- a/web/src/app/pages/streams-detail/stream-paid-chat-chart/stream-paid-chat-chart.html
+++ b/web/src/app/pages/streams-detail/stream-paid-chat-chart/stream-paid-chat-chart.html
@@ -1,6 +1,6 @@
 <!-- TODO: group by (color|currency|time) -->
 
-<div class="mat-border-divider mat-bg-card rounded border-solid mb-4">
+<div class="mat-border-divider mat-bg-card rounded border border-solid mb-4">
   <div class="mx-4 mt-4">
     <div class="mat-h3 m-0" i18n="@@paidLiveChat">
       Super Chat & Super Stickers
