--- a/web/src/app/pages/settings/language/title-language/title-language.component.html
+++ b/web/src/app/pages/settings/language/title-language/title-language.component.html
@@ -1,5 +1,5 @@
 <mat-form-field appearance="outline" class="w-full">
-  <mat-label>Title Language</mat-label>
+  <mat-label>Name Language</mat-label>
   <mat-select>
     <mat-option *ngFor="let lang of languages" [value]="lang.value">
       {{ lang.label }}
