--- a/web/src/app/pages/settings/miscellaneous/miscellaneous.component.html
+++ b/web/src/app/pages/settings/miscellaneous/miscellaneous.component.html
@@ -1,4 +1,4 @@
-<h3 class="mat-h3">Miscellaneous</h3>
+<h3 class="mat-h3 my-4">Miscellaneous</h3>
 
 <mat-nav-list>
   <a mat-list-item routerLink="/settings/ngsw">Service Worker</a>
