--- a/web/src/app/pages/settings/settings.html
+++ b/web/src/app/pages/settings/settings.html
@@ -1,25 +1,37 @@
 <div class="mx-auto max-w-4xl p-4">
-  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+  <div
+    class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
+  >
     <hls-appearance></hls-appearance>
   </div>
 
-  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+  <div
+    class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
+  >
     <hls-language></hls-language>
   </div>
 
-  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+  <div
+    class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
+  >
     <hls-region></hls-region>
   </div>
 
-  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+  <div
+    class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
+  >
     <hls-youtube-settings></hls-youtube-settings>
   </div>
 
-  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+  <div
+    class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
+  >
     <hls-vtubers-settings></hls-vtubers-settings>
   </div>
 
-  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+  <div
+    class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
+  >
     <hls-miscellaneous></hls-miscellaneous>
   </div>
 </div>
