--- a/web/src/app/pages/streams-detail/stream-live-chat-chart/stream-live-chat-chart.html
+++ b/web/src/app/pages/streams-detail/stream-live-chat-chart/stream-live-chat-chart.html
@@ -1,4 +1,4 @@
-<div class="mat-border-divider mat-bg-card rounded border-solid mb-4">
+<div class="mat-border-divider mat-bg-card rounded border border-solid mb-4">
   <div class="mx-4 mt-4">
     <div class="mat-h3 m-0" i18n="@@liveChat">Live Chat</div>
     <div class="mat-secondary-text mat-small">
