--- a/web/src/app/pages/streams-detail/stream-summary/stream-summary.html
+++ b/web/src/app/pages/streams-detail/stream-summary/stream-summary.html
@@ -52,7 +52,7 @@
 </div>
 
 <div
-  class="grid grid-cols-2 sm:grid-cols-4 gap-4 p-4 mat-border-divider mat-bg-card rounded border-solid mb-4"
+  class="grid grid-cols-2 sm:grid-cols-4 gap-4 p-4 mat-border-divider mat-bg-card rounded border border-solid mb-4"
 >
   <div>
     <div class="mat-small mat-secondary-text">Avg./max viewers</div>
