feat(web): support change name language

--- a/web/src/app/pages/settings/language/language.component.html
+++ b/web/src/app/pages/settings/language/language.component.html
@@ -2,4 +2,4 @@
 
 <hls-display-language></hls-display-language>
 
-<hls-title-language></hls-title-language>
+<hls-name-language></hls-name-language>
