--- a/web/src/app/pages/settings/vtubers-settings/vtubers-settings.html
+++ b/web/src/app/pages/settings/vtubers-settings/vtubers-settings.html
@@ -1,7 +1,7 @@
 <h3 class="my-4">
   <div class="mat-h3 m-0">VTuber</div>
   <div class="mat-text-caption mat-secondary-text">
-    Selected {{ config.vtuber.size }} out of {{count}}
+    Selected {{ vtuberSrv.selected.size }} out of {{count}}
   </div>
 </h3>
 
