feat(web): link to new changelog page

--- a/web/src/app/layout/sidenav/sidenav.html
+++ b/web/src/app/layout/sidenav/sidenav.html
@@ -19,10 +19,10 @@
       <div>
         <a
           class="text-inherit leading-5 no-underline"
-          href="https://github.com/PoiScript/HoloStats/blob/master/NEWS.md"
+          href="https://poiscript.notion.site/HoloStats-Changelog-8363eab6c41f419d93bf104620c55bd6"
           target="_blank"
         >
-          News
+          Changelog
         </a>
 
         <a
