--- a/web/src/app/pages/channels-list/channel-table/channel-table.html
+++ b/web/src/app/pages/channels-list/channel-table/channel-table.html
@@ -12,8 +12,10 @@
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let row">
       <img
-        class="profile w-8 h-8 max-w-none cursor-pointer align-middle rounded-full"
-        src="/assets/thumbnail/{{ row.vtuberId }}.jpg"
+        class="profile max-w-none cursor-pointer align-middle rounded-full"
+        height="32"
+        width="32"
+        [ngSrc]="'/assets/thumbnail/' + row.vtuberId + '.jpg'"
         [routerLink]="['/vtuber', row.vtuberId]"
       />
     </td>
