--- a/web/src/app/pages/settings/youtube-settings/youtube-settings.html
+++ b/web/src/app/pages/settings/youtube-settings/youtube-settings.html
@@ -4,8 +4,10 @@
   <div class="flex items-center space-x-2 mb-5">
     <div class="flex-shrink-0">
       <img
-        class="w-10 h-10 rounded-full select-none"
-        [attr.src]="user.imageUrl"
+        class="rounded-full select-none"
+        height="40"
+        width="40"
+        [ngSrc]="user.imageUrl"
         [attr.alt]="user.name"
       />
     </div>
