--- a/web/src/app/pages/settings/language/language.component.html
+++ b/web/src/app/pages/settings/language/language.component.html
@@ -1,5 +1,5 @@
 <h3 class="mat-h3 my-4">Language</h3>
 
-<hls-display-language></hls-display-language>
+<hls-display-language />
 
-<hls-name-language></hls-name-language>
+<hls-name-language />
