--- a/web/src/app/pages/settings/region/region.component.html
+++ b/web/src/app/pages/settings/region/region.component.html
@@ -1,5 +1,5 @@
 <h3 class="mat-h3 my-4">Region</h3>
 
-<hls-timezone-settings></hls-timezone-settings>
+<hls-timezone-settings />
 
-<hls-currency-settings></hls-currency-settings>
+<hls-currency-settings />
