--- a/web/src/app/pages/settings/settings.html
+++ b/web/src/app/pages/settings/settings.html
@@ -2,36 +2,36 @@
   <div
     class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
   >
-    <hls-appearance></hls-appearance>
+    <hls-appearance />
   </div>
 
   <div
     class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
   >
-    <hls-language></hls-language>
+    <hls-language />
   </div>
 
   <div
     class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
   >
-    <hls-region></hls-region>
+    <hls-region />
   </div>
 
   <div
     class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
   >
-    <hls-youtube-settings></hls-youtube-settings>
+    <hls-youtube-settings />
   </div>
 
   <div
     class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
   >
-    <hls-vtubers-settings></hls-vtubers-settings>
+    <hls-vtubers-settings />
   </div>
 
   <div
     class="mat-border-divider mat-bg-card rounded border border-solid px-4 mb-4"
   >
-    <hls-miscellaneous></hls-miscellaneous>
+    <hls-miscellaneous />
   </div>
 </div>
