--- a/web/src/app/pages/settings/youtube-settings/youtube-settings.html
+++ b/web/src/app/pages/settings/youtube-settings/youtube-settings.html
@@ -20,7 +20,7 @@
     <button mat-stroked-button (click)="gapi.signOut()">Sign Out</button>
   </div>
 
-  <hls-playlist-selector></hls-playlist-selector>
+  <hls-playlist-selector />
 </div>
 
 <ng-template #login>
