--- a/web/src/app/pages/streams-detail/stream-live-chat-chart/stream-live-chat-chart.html
+++ b/web/src/app/pages/streams-detail/stream-live-chat-chart/stream-live-chat-chart.html
@@ -6,5 +6,5 @@
     </div>
   </div>
 
-  <hls-chart [options]="option" (chartInit)="onChartInit($event)"></hls-chart>
+  <hls-chart [options]="option" (chartInit)="onChartInit($event)" />
 </div>
