--- a/web/src/app/pages/streams-detail/stream-paid-chat-chart/stream-paid-chat-chart.html
+++ b/web/src/app/pages/streams-detail/stream-paid-chat-chart/stream-paid-chat-chart.html
@@ -11,5 +11,5 @@
     </div>
   </div>
 
-  <hls-chart [options]="options" [height]="height"></hls-chart>
+  <hls-chart [options]="options" [height]="height" />
 </div>
