--- a/web/src/app/pages/vtubers-detail/vtuber-summary/vtuber-summary.html
+++ b/web/src/app/pages/vtubers-detail/vtuber-summary/vtuber-summary.html
@@ -18,7 +18,7 @@
         target="_blank"
         [attr.href]="link.href"
       >
-        <mat-icon class="!h-5 !w-5 mr-2" [svgIcon]="link.icon"></mat-icon>
+        <mat-icon class="!h-5 !w-5 mr-2" [svgIcon]="link.icon" />
       </a>
     </div>
   </div>
