--- a/web/src/app/components/filter-group/date-filter/date-filter.html
+++ b/web/src/app/components/filter-group/date-filter/date-filter.html
@@ -14,7 +14,7 @@
     aria-hidden="true"
     class="inline-block w-2 h-1 ml-1 align-middle fill-current"
   >
-    <polygon points="0,0 5,5 10,0"></polygon>
+    <polygon points="0,0 5,5 10,0" />
   </svg>
 </button>
 
@@ -35,6 +35,6 @@
       (selectedChange)="onChange($event)"
       [minDate]="_min"
       [maxDate]="_max"
-    ></mat-calendar>
+    />
   </div>
 </ng-template>
