--- a/web/src/app/components/filter-group/filter-group.html
+++ b/web/src/app/components/filter-group/filter-group.html
@@ -1,14 +1,14 @@
 <hls-vtuber-filter
   *ngIf="displayVTuber"
   (selectedChange)="displayClear = true; vtuberChanged.emit($event)"
-></hls-vtuber-filter>
+/>
 
 <hls-date-filter
   *ngIf="displayDateRange"
   (selectedChange)="displayClear = true; dateRangeChanged.emit($event)"
-></hls-date-filter>
+/>
 
 <ng-container *ngIf="displayClear">
-  <mat-divider [vertical]="true" style="display: inline"></mat-divider>
+  <mat-divider [vertical]="true" style="display: inline" />
   <button mat-button (click)="onClear()">Clear</button>
 </ng-container>
