--- a/web/src/app/components/stream-list/stream-list.html
+++ b/web/src/app/components/stream-list/stream-list.html
@@ -9,7 +9,7 @@
         <hls-stream-item
           *ngFor="let stream of group.streams; trackBy:trackBy"
           [stream]="stream"
-        ></hls-stream-item>
+        />
       </div>
     </ng-container>
   </ng-container>
@@ -21,7 +21,7 @@
     <hls-stream-item
       *ngFor="let stream of items; trackBy:trackBy"
       [stream]="stream"
-    ></hls-stream-item>
+    />
   </div>
 
   <ng-container *ngSwitchCase="loading && !!groupBy">
@@ -31,9 +31,7 @@
       </div>
 
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 mb-6">
-        <hls-stream-item-shimmer
-          *ngFor="let _ of [1, 2, 3, 4, 5]"
-        ></hls-stream-item-shimmer>
+        <hls-stream-item-shimmer *ngFor="let _ of [1, 2, 3, 4, 5]" />
       </div>
     </ng-container>
   </ng-container>
@@ -42,12 +40,10 @@
     class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4"
     *ngSwitchCase="loading && !groupBy"
   >
-    <hls-stream-item-shimmer
-      *ngFor="let _ of [1, 2, 3, 4, 5]"
-    ></hls-stream-item-shimmer>
+    <hls-stream-item-shimmer *ngFor="let _ of [1, 2, 3, 4, 5]" />
   </div>
 </ng-container>
 
 <div [hidden]="loading || hideSpinner" class="m-4">
-  <mat-spinner class="mx-auto" #spinner [diameter]="30"></mat-spinner>
+  <mat-spinner class="mx-auto" #spinner [diameter]="30" />
 </div>
