--- a/web/src/app/pages/streams-detail/stream-viewers-chart/stream-viewers-chart.html
+++ b/web/src/app/pages/streams-detail/stream-viewers-chart/stream-viewers-chart.html
@@ -7,5 +7,5 @@
     </div>
   </div>
 
-  <hls-chart [options]="options" (chartInit)="onChartInit($event)"></hls-chart>
+  <hls-chart [options]="options" (chartInit)="onChartInit($event)" />
 </div>
