--- a/web/src/app/pages/vtubers-detail/stream-time/stream-time-bar-chart/stream-time-bar-chart.html
+++ b/web/src/app/pages/vtubers-detail/stream-time/stream-time-bar-chart/stream-time-bar-chart.html
@@ -1,5 +1,5 @@
 <div class="overflow-x-auto">
   <div class="mx-auto" [style.width.px]="width">
-    <hls-chart [height]="156" [options]="options"></hls-chart>
+    <hls-chart [height]="156" [options]="options" />
   </div>
 </div>
