--- a/web/src/app/pages/vtubers-detail/stream-time/stream-time-calendar/stream-time-calendar.html
+++ b/web/src/app/pages/vtubers-detail/stream-time/stream-time-calendar/stream-time-calendar.html
@@ -10,7 +10,7 @@
 
   <div dir="rtl" class="flex-1 overflow-x-auto">
     <div [style.width.px]="920">
-      <hls-chart [height]="156" [options]="option"></hls-chart>
+      <hls-chart [height]="156" [options]="option" />
     </div>
   </div>
 </div>
@@ -27,7 +27,7 @@
       [attr.width]="12"
       [attr.height]="12"
       [attr.fill]="color"
-    ></rect>
+    />
   </svg>
   More
 </div>
