--- a/web/src/app/pages/vtubers-detail/vtuber-streams/vtuber-streams.component.html
+++ b/web/src/app/pages/vtubers-detail/vtuber-streams/vtuber-streams.component.html
@@ -23,10 +23,7 @@
       "
       aria-label="Refresh"
     >
-      <mat-icon
-        [class.animate-spin]="result.isFetching"
-        svgIcon="sync"
-      ></mat-icon>
+      <mat-icon [class.animate-spin]="result.isFetching" svgIcon="sync" />
     </button>
   </div>
 
