--- a/src/app/pages/channel-stats/subscriber/subscriber.html
+++ b/src/app/pages/channel-stats/subscriber/subscriber.html
@@ -4,11 +4,12 @@
 
 <ng-template #table>
   <ng-container *ngIf="result() as result">
-    <div class="flex flex-row items-center p-4">
-      <div class="flex-1">
-        <hls-vtuber-filter (selectedChange)="vtuberSelected.set($event)" />
-      </div>
-
+    <div
+      class="flex flex-row items-center p-4 gap-2 overflow-y-hidden overflow-x-auto"
+    >
+      <hls-platform-filter (onChange)="platform.set($event)" />
+      <hls-vtuber-filter (selectedChange)="vtuberSelected.set($event)" />
+      <div class="flex-1"></div>
       <hls-refresh-button
         [isLoading]="result.isFetching"
         [refresh]="result.refetch"
