--- a/src/app/pages/vtubers-detail/channel-overview/channel-overview.html
+++ b/src/app/pages/vtubers-detail/channel-overview/channel-overview.html
@@ -1,6 +1,4 @@
-<div
-  class="mat-border-divider rounded border border-solid p-4 mb-4"
->
+<div class="mat-border-divider rounded border border-solid p-4 mb-4">
   <div class="flex flex-row items-center mb-4">
     <div class="flex-1 mat-h3 m-0">Overview</div>
 
@@ -24,19 +22,23 @@
     [channel]="channels[channelIdx]"
   />
 
-  <mat-divider class="!my-2" />
+  <ng-container *ngIf="channels[channelIdx].platform !== 'TWITCH'">
+    <mat-divider class="!my-2" />
 
-  <hls-stats-chart
-    kind="view"
-    [precision]="precision"
-    [channel]="channels[channelIdx]"
-  />
+    <hls-stats-chart
+      kind="view"
+      [precision]="precision"
+      [channel]="channels[channelIdx]"
+    />
+  </ng-container>
 
-  <mat-divider class="!my-2" />
+  <ng-container *ngIf="channels[channelIdx].platform === 'YOUTUBE'">
+    <mat-divider class="!my-2" />
 
-  <hls-stats-chart
-    kind="revenue"
-    [precision]="precision"
-    [channel]="channels[channelIdx]"
-  />
+    <hls-stats-chart
+      kind="revenue"
+      [precision]="precision"
+      [channel]="channels[channelIdx]"
+    />
+  </ng-container>
 </div>
