--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -4,11 +4,11 @@
 
     <div class="mat-typography p-4">
       <p>
-        VTStats is a platform for VTubers Statistics and Data Visualization.
+        vtstats is a platform for VTubers Statistics and Data Visualization.
       </p>
 
       <p>
-        VTStats is an open source project, you can find the source code at
+        This is an open source project, you can find the source code at
         <a
           class="text-inherit"
           target="_blank"
